<resources>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="rate_and_review">Rate and review</string>
    <string name="support_development">Support Development</string>
    <string name="archive">Archive</string>
    <string name="elements">Elements</string>
    <string name="pictures">Pictures</string>
    <string name="organizer">Organizer</string>
    <string name="process">Process</string>
    <string name="events">Events</string>
    <string name="edit_cosplay">Edit cosplay</string>
    <string name="view_summary">View summary</string>
    <string name="mark_as_completed">Mark as completed</string>
    <string name="app_name">CosLog</string>
    <string name="elements_tab_one_name">To Buy</string>
    <string name="elements_tab_two_name">To Make</string>
    <string name="add_cosplay">add cosplay</string>
    <string name="cosplay">Cosplay</string>
    <string name="cosplay_details">Cosplay Details</string>
    <string name="default_cost">0.00</string>

    <string-array name="progress_array">
        <item>0%</item>
        <item>5%</item>
        <item>10%</item>
        <item>15%</item>
        <item>20%</item>
        <item>25%</item>
        <item>30%</item>
        <item>35%</item>
        <item>40%</item>
        <item>45%</item>
        <item>50%</item>
        <item>55%</item>
        <item>65%</item>
        <item>70%</item>
        <item>75%</item>
        <item>80%</item>
        <item>85%</item>
        <item>90%</item>
        <item>95%</item>
        <item>100%</item>
    </string-array>
</resources>