<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:visible="false"
        android:id="@+id/shareButton"
        android:title="Share"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_share" />
    <item
        android:visible="false"
        android:id="@+id/deleteButton"
        android:title="Delete"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_delete" />

    <item
        android:id="@+id/edit_cosplay"
        android:title="@string/edit_cosplay"
        app:showAsAction="never" />

    <item
        android:id="@+id/view_summary"
        android:title="@string/view_summary"
        app:showAsAction="never" />

    <item
        android:id="@+id/mark_completed"
        android:title="@string/mark_as_completed"
        app:showAsAction="never" />
</menu>